"Restart & Update" button is misleading in Fedora Silverblue
Affected version
gnome-software-46.3-1.fc40.x86_64
Description
Screencast_from_2024-07-23_20-03-13
After the updates have been downloaded, when clicking in the "Restart & Update" button, the restart confirmation prompt from GNOME Shell doesn't immediately appear; instead, an indefinite progress bar show below the button label and this process can take a long time. Then, you can't do anything else in the device while you wait, because the restart dialog will appear in front of everything and will block any interaction with the shell, as expected. If you cancel the restart, clicking in "Restart & Update" again will show that indefinite progress bar and the process will start all over again, which is very frustrating.
This doesn't happen in Fedora Kinoite with KDE Discover. Pressing in the restart button triggers the restart prompt with no delays: