rpm-ostree: Stage updates when automatic updates are on

When automatic updates are on the only action required
to apply them is to restart the machine. 'Retart & Update'
button is back to being more clear i.e. it immediately
restarts the machine to apply updates.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/2619